near-bindgen/compilation_tests/method_generic.stderr
error: Methods exposed as contract API cannot use type parameters
  --> $DIR/method_generic.rs:15:19
   |
15 |     pub fn method<'a, T: 'a + std::fmt::Display>(&self) {
   |                   ^^

error: Could not compile `near-bindgen-tests`.
